--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,93 @@ h2{
     min-width: 120px;
     border-radius: 15px;
     font-weight: bold;
-    color: white; 
+    color: var(--secondary-color) 
 }
 
 .btn-1:hover {
     background-color: var(--terceary-color);
+}
+
+
+/* ------------------------CONTACTO-------------------------------- */
+
+
+.contacts {
+    font-size: 55px;
+    line-height: 70px;
+    font-weight: 600;    
+    color: var(--primary-color);
+    margin-bottom:25px;
+}
+
+.sobre {
+    height: 80vh;
+    background-color: var(--secondary-color);
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
+
+form {
+    background-color: var(--secondary-color);
+    padding: 20px;
+    border-radius: 35px;
+    width: 600px; 
+    height: 650px;
+    flex-direction: column; 
+    align-items: center;
+    color: rgb(76, 76, 76);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+     
+}
+
+.input {
+    margin-bottom: 25px;
+}
+
+.input label {
+    display: block;
+    margin-bottom: 0px;
+    font-weight: 500;
+}
+
+.input input{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid rgb(110, 110, 110);
+    border-radius: 25px;
+    margin-bottom: 10px;
+}
+
+.input textarea {
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+    border: 1px solid rgb(110, 110, 110);
+    border-radius: 25px;
+    margin-bottom: 10px;
+}
+
+.btn-2 {
+    margin-top: 20px;
+    cursor: pointer;
+    padding: 10px 20px;
+    width: 150px;
+    padding: 15px;
+    background: var(--primary-color); 
+    color: var(--secondary-color);
+    border: none;
+    border-radius: 35px;   
+    display: block;
+    margin: auto;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.btn-2:hover {
+    background:var(--terceary-color);
 }
