--- a/css/styles.css
+++ b/css/styles.css
@@ -432,7 +432,8 @@ form {
 
     /*-------------------- Redimension "NAVBAR" -------------------- */    
     .menu{
-        padding: 30px; 
+        padding: 30px;
+        margin-bottom: 30px 
     }
 
     .menu label {
